codex-agent-runtime-desktop/native/c-api/include/codex_agent.h

typedef int32_t codex_agent_status_t;
typedef struct codex_agent_context codex_agent_context_t;
typedef struct codex_agent_conversation codex_agent_conversation_t;
typedef struct codex_agent_subscription codex_agent_subscription_t;
typedef struct codex_agent_snapshot codex_agent_snapshot_t;
typedef struct codex_agent_conversation_id codex_agent_conversation_id_t;
typedef struct codex_agent_conversation_summary codex_agent_conversation_summary_t;
typedef struct codex_agent_message codex_agent_message_t;
typedef struct codex_agent_conversation_value codex_agent_conversation_value_t;
/*
 * Ownership of each non-NULL snapshot transfers when the state callback is
 * entered. The snapshot is immutable and must be passed once to
 * codex_agent_snapshot_destroy unless its context is successfully destroyed
 * first.
 */
typedef void (CODEX_AGENT_CALL *codex_agent_state_callback_t)(
    codex_agent_context_t *context,
    codex_agent_subscription_t *subscription,
    codex_agent_status_t event_status,
    codex_agent_snapshot_t *snapshot,
    int32_t is_terminal,
    void *user_data);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_conversation_summary_destroy(
    codex_agent_context_t *context,
    codex_agent_conversation_summary_t **summary);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_conversation_summary_conversation_id(
    codex_agent_context_t *context,
    codex_agent_conversation_summary_t *summary,
    codex_agent_conversation_id_t **out_conversation_id);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_conversation_summary_title_copy(
    codex_agent_context_t *context,
    codex_agent_conversation_summary_t *summary,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_conversation_summary_updated_at_epoch_seconds(
    codex_agent_context_t *context,
    codex_agent_conversation_summary_t *summary,
    int64_t *out_updated_at_epoch_seconds);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_conversation_can_start_turn_get(
    codex_agent_context_t *context,
    codex_agent_conversation_t *conversation,
    codex_agent_snapshot_t **out_snapshot);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_conversation_can_start_turn_subscribe(
    codex_agent_context_t *context,
    codex_agent_conversation_t *conversation,
    codex_agent_state_callback_t callback,
    void *user_data,
    codex_agent_subscription_t **out_subscription);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_conversation_can_reload_get(
    codex_agent_context_t *context,
    codex_agent_conversation_t *conversation,
    codex_agent_snapshot_t **out_snapshot);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_conversation_can_reload_subscribe(
    codex_agent_context_t *context,
    codex_agent_conversation_t *conversation,
    codex_agent_state_callback_t callback,
    void *user_data,
    codex_agent_subscription_t **out_subscription);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_conversation_can_run_shell_command_get(
    codex_agent_context_t *context,
    codex_agent_conversation_t *conversation,
    codex_agent_snapshot_t **out_snapshot);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_conversation_can_run_shell_command_subscribe(
    codex_agent_context_t *context,
    codex_agent_conversation_t *conversation,
    codex_agent_state_callback_t callback,
    void *user_data,
    codex_agent_subscription_t **out_subscription);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_conversation_is_turn_active_get(
    codex_agent_context_t *context,
    codex_agent_conversation_t *conversation,
    codex_agent_snapshot_t **out_snapshot);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_conversation_is_turn_active_subscribe(
    codex_agent_context_t *context,
    codex_agent_conversation_t *conversation,
    codex_agent_state_callback_t callback,
    void *user_data,
    codex_agent_subscription_t **out_subscription);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_conversation_value_destroy(
    codex_agent_context_t *context,
    codex_agent_conversation_value_t **conversation);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_conversation_value_summary(
    codex_agent_context_t *context,
    codex_agent_conversation_value_t *conversation,
    codex_agent_conversation_summary_t **out_summary);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_conversation_value_messages_count(
    codex_agent_context_t *context,
    codex_agent_conversation_value_t *conversation,
    size_t *out_count);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_conversation_value_message_at(
    codex_agent_context_t *context,
    codex_agent_conversation_value_t *conversation,
    size_t index,
    codex_agent_message_t **out_message);