codex-agent-bindings/csharp/src/CodexAgent/Interop/NativeConversationMethods.cs


    [LibraryImport(LibraryName, EntryPoint = "codex_agent_conversation_can_reload_get")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus ConversationCanReloadGetImport(nint context, nint conversation, out nint snapshot);
    internal static CodexStatus ConversationCanReloadGet(nint context, nint conversation, out nint snapshot)
    { var status = ConversationCanReloadGetImport(context, conversation, out snapshot); RecordExactCall(); return status; }
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_conversation_can_reload_subscribe")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus ConversationCanReloadSubscribeImport(nint context, nint conversation, delegate* unmanaged[Cdecl]<nint, nint, CodexStatus, nint, int, nint, void> callback, nint userData, out nint subscription);
    internal static CodexStatus ConversationCanReloadSubscribe(nint context, nint conversation, delegate* unmanaged[Cdecl]<nint, nint, CodexStatus, nint, int, nint, void> callback, nint userData, out nint subscription)
    { var status = ConversationCanReloadSubscribeImport(context, conversation, callback, userData, out subscription); RecordExactCall(); return status; }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_conversation_can_run_shell_command_get")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus ConversationCanRunShellCommandGetImport(nint context, nint conversation, out nint snapshot);
    internal static CodexStatus ConversationCanRunShellCommandGet(nint context, nint conversation, out nint snapshot)
    { var status = ConversationCanRunShellCommandGetImport(context, conversation, out snapshot); RecordExactCall(); return status; }
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_conversation_can_run_shell_command_subscribe")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus ConversationCanRunShellCommandSubscribeImport(nint context, nint conversation, delegate* unmanaged[Cdecl]<nint, nint, CodexStatus, nint, int, nint, void> callback, nint userData, out nint subscription);
    internal static CodexStatus ConversationCanRunShellCommandSubscribe(nint context, nint conversation, delegate* unmanaged[Cdecl]<nint, nint, CodexStatus, nint, int, nint, void> callback, nint userData, out nint subscription)
    { var status = ConversationCanRunShellCommandSubscribeImport(context, conversation, callback, userData, out subscription); RecordExactCall(); return status; }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_conversation_can_start_turn_get")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus ConversationCanStartTurnGetImport(nint context, nint conversation, out nint snapshot);
    internal static CodexStatus ConversationCanStartTurnGet(nint context, nint conversation, out nint snapshot)
    { var status = ConversationCanStartTurnGetImport(context, conversation, out snapshot); RecordExactCall(); return status; }
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_conversation_can_start_turn_subscribe")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus ConversationCanStartTurnSubscribeImport(nint context, nint conversation, delegate* unmanaged[Cdecl]<nint, nint, CodexStatus, nint, int, nint, void> callback, nint userData, out nint subscription);
    internal static CodexStatus ConversationCanStartTurnSubscribe(nint context, nint conversation, delegate* unmanaged[Cdecl]<nint, nint, CodexStatus, nint, int, nint, void> callback, nint userData, out nint subscription)
    { var status = ConversationCanStartTurnSubscribeImport(context, conversation, callback, userData, out subscription); RecordExactCall(); return status; }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_conversation_is_turn_active_get")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus ConversationIsTurnActiveGetImport(nint context, nint conversation, out nint snapshot);
    internal static CodexStatus ConversationIsTurnActiveGet(nint context, nint conversation, out nint snapshot)
    { var status = ConversationIsTurnActiveGetImport(context, conversation, out snapshot); RecordExactCall(); return status; }
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_conversation_is_turn_active_subscribe")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus ConversationIsTurnActiveSubscribeImport(nint context, nint conversation, delegate* unmanaged[Cdecl]<nint, nint, CodexStatus, nint, int, nint, void> callback, nint userData, out nint subscription);
    internal static CodexStatus ConversationIsTurnActiveSubscribe(nint context, nint conversation, delegate* unmanaged[Cdecl]<nint, nint, CodexStatus, nint, int, nint, void> callback, nint userData, out nint subscription)
    { var status = ConversationIsTurnActiveSubscribeImport(context, conversation, callback, userData, out subscription); RecordExactCall(); return status; }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_conversation_summary_destroy")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus ConversationSummaryDestroy(nint context, ref nint summary);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_conversation_summary_conversation_id")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus ConversationSummaryConversationId(nint context, nint summary, out nint id);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_conversation_summary_title_copy")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus ConversationSummaryTitleCopy(nint context, nint summary, byte* buffer, nuint capacity, out nuint required);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_conversation_summary_updated_at_epoch_seconds")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus ConversationSummaryUpdatedAtEpochSeconds(nint context, nint summary, out long value);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_conversation_value_destroy")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus ConversationValueDestroy(nint context, ref nint conversation);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_conversation_value_summary")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus ConversationValueSummary(nint context, nint conversation, out nint summary);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_conversation_value_messages_count")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus ConversationValueMessagesCount(nint context, nint conversation, out nuint count);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_conversation_value_message_at")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus ConversationValueMessageAt(nint context, nint conversation, nuint index, out nint message);
